--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.Marker {
+  position: relative;
+}
+
+.Marker span {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-weight: bold;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
